Your commit message here

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </nav>
   
       <div class="social-links">
-        <a href="https://www.facebook.com/nim.amsts7" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.facebook.com/nim.amsts" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/niiimmm_/?igshid=OGQ5ZDc2ODk2ZA%3D%3D&fbclid=IwAR058aMf0qjGj3kJmZoWdmsQJ9vBcX2sqV9NkESoQKMXyvJ2t3RcOYqtzCw" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/nimfa-amistoso-0716b12b1/" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
@@ -239,7 +239,7 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://www.facebook.com/nim.amsts7" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.facebook.com/nim.amsts" class="facebook"><i class="bi bi-facebook"></i></a>
               <a href="https://www.instagram.com/niiimmm_/?igshid=OGQ5ZDc2ODk2ZA%3D%3D&fbclid=IwAR058aMf0qjGj3kJmZoWdmsQJ9vBcX2sqV9NkESoQKMXyvJ2t3RcOYqtzCw" class="instagram"><i class="bi bi-instagram"></i></a>
               <a href="https://www.linkedin.com/in/nimfa-amistoso-0716b12b1/" class="linkedin"><i class="bi bi-linkedin"></i></a>
 
